# ext-php-rs

./: .editorconfig  .gitignore  Cargo.toml  allowed_bindings.rs
.github/: codecov.yml
.github/actions/setup-llvm/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-rust-php/: action.yml
.github/workflows/: ci.yml  docs.yml
crates/php-testsuite/: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  composer.json  phpunit.xml
crates/php-testsuite/php/: run-tests.php
crates/php-testsuite/php/tests/: .gitignore
crates/php-testsuite/php/tests/Types/: PassthroughTest.php  passthrough_array.phpt  passthrough_string.phpt
crates/php-testsuite/src/: lib.rs
crates/php-testsuite/src/types/: mod.rs  passthrough.rs
tests/: phpt.rs  phpunit.rs
xtask/: Cargo.toml  README.md
xtask/src/: coverage.rs  flags.rs  main.rs  phpt.rs  phpunit.rs  rebuild_self.rs  sync_bindings.rs
